adding more files

--- a/HeroesOfPymoli/Pymoli.ipynb
+++ b/HeroesOfPymoli/Pymoli.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "data_file = \"resources/purchase_data.csv\""
+    "import numpy as np\n",
+    "import os\n",
+    "data_file_to_load = \"resources/purchase_data.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -116,14 +118,392 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_file_df = pd.read_csv(data_file)\n",
-    "data_file_df.head()\n"
+    "purchase_data_df = pd.read_csv(data_file_to_load)\n",
+    "purchase_data_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>576</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Players\n",
+       "0            576"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Total Players\n",
+    "#datafunctions day1\n",
+    "\n",
+    "totalplayers = len(purchase_data_df[\"SN\"].value_counts())\n",
+    "totalplayers_df = pd.DataFrame([{\"Total Players\":totalplayers}])\n",
+    "totalplayers_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Number of Unique Items</th>\n",
+       "      <th>Average price</th>\n",
+       "      <th>Number of Purchases</th>\n",
+       "      <th>Total Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4.40</th>\n",
+       "      <td>179</td>\n",
+       "      <td>3.050987</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2379.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.23</th>\n",
+       "      <td>179</td>\n",
+       "      <td>3.050987</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2379.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.35</th>\n",
+       "      <td>179</td>\n",
+       "      <td>3.050987</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2379.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.18</th>\n",
+       "      <td>179</td>\n",
+       "      <td>3.050987</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2379.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.02</th>\n",
+       "      <td>179</td>\n",
+       "      <td>3.050987</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2379.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.17</th>\n",
+       "      <td>179</td>\n",
+       "      <td>3.050987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2379.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.17</th>\n",
+       "      <td>179</td>\n",
+       "      <td>3.050987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2379.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.99</th>\n",
+       "      <td>179</td>\n",
+       "      <td>3.050987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2379.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.50</th>\n",
+       "      <td>179</td>\n",
+       "      <td>3.050987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2379.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.30</th>\n",
+       "      <td>179</td>\n",
+       "      <td>3.050987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2379.77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>145 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Number of Unique Items  Average price  Number of Purchases  \\\n",
+       "4.40                     179       3.050987                   21   \n",
+       "4.23                     179       3.050987                   20   \n",
+       "4.35                     179       3.050987                   14   \n",
+       "2.18                     179       3.050987                   14   \n",
+       "1.02                     179       3.050987                   14   \n",
+       "...                      ...            ...                  ...   \n",
+       "2.17                     179       3.050987                    1   \n",
+       "4.17                     179       3.050987                    1   \n",
+       "1.99                     179       3.050987                    1   \n",
+       "4.50                     179       3.050987                    1   \n",
+       "3.30                     179       3.050987                    1   \n",
+       "\n",
+       "      Total Revenue  \n",
+       "4.40        2379.77  \n",
+       "4.23        2379.77  \n",
+       "4.35        2379.77  \n",
+       "2.18        2379.77  \n",
+       "1.02        2379.77  \n",
+       "...             ...  \n",
+       "2.17        2379.77  \n",
+       "4.17        2379.77  \n",
+       "1.99        2379.77  \n",
+       "4.50        2379.77  \n",
+       "3.30        2379.77  \n",
+       "\n",
+       "[145 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Purchase Analysis(Total)\n",
+    "#Run basic calculations to obtain number of unique items, average price, etc.\n",
+    "#datafunctions day1\n",
+    "\n",
+    "unique_items = len(purchase_data_df[\"Item Name\"].unique())\n",
+    "\n",
+    "average_price = purchase_data_df[\"Price\"].mean()\n",
+    "\n",
+    "number_of_purchases = purchase_data_df[\"Price\"].value_counts()\n",
+    "total_revenue = purchase_data_df[\"Price\"].sum()\n",
+    "#Create a summary data frame to hold the results\n",
+    "#goodreadssummary\n",
+    "purchase_analysis_df = pd.DataFrame({\"Number of Unique Items\": unique_items,\n",
+    "                                     \"Average price\": average_price,\n",
+    "                                 \"Number of Purchases\": number_of_purchases,\n",
+    "                                     \"Total Revenue\": total_revenue})\n",
+    "purchase_analysis_df\n",
+    "#Optional: give the displayed data cleaner formatting\n",
+    "#mapping exerciseday3\n",
+    "#purchase_analysis_df[\"Average price\"] = purchase_data_df[\"Average price\"].map(\"${:.2f}\".format)\n",
+    "\n",
+    "#Display the summary data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'genders_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-115-1cd6a596d11e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#Percentage and Count of Male Players\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mgenderpercent\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mgenders_df\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mplayer_count\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;31m#Percentage and Count of Female Players\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'genders_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#Gender Demographics\n",
+    "genders = purchase_data_df[\"Gender\"].value_counts()\n",
+    "gender_df = pd.DataFrame(gender)\n",
+    "#Percentage and Count of Male Players\n",
+    "\n",
+    "genderpercent = (genders_df/player_count)*100\n",
+    "#Percentage and Count of Female Players\n",
+    "\n",
+    "\n",
+    "#Percentage and Count of Other / Non-Disclosed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Purchase Analysis(gender)\n",
+    " \n",
+    "#Run basic calculations to obtain purchase count, avg. purchase price, avg. purchase total per person etc. by gender\n",
+    "\n",
+    "\n",
+    "#Create a summary data frame to hold the results\n",
+    "\n",
+    "\n",
+    "#Optional: give the displayed data cleaner formatting\n",
+    "\n",
+    "\n",
+    "#Display the summary data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Age Demographics\n",
+    "#Establish bins for ages\n",
+    "\n",
+    "\n",
+    "#Categorize the existing players using the age bins. Hint: use pd.cut()\n",
+    "\n",
+    "\n",
+    "#Calculate the numbers and percentages by age group\n",
+    "\n",
+    "\n",
+    "#Create a summary data frame to hold the results\n",
+    "\n",
+    "\n",
+    "#Optional: round the percentage column to two decimal points\n",
+    "\n",
+    "\n",
+    "#Display Age Demographics Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Purchasing Analysis(Age)\n",
+    "#Bin the purchase_data data frame by age\n",
+    "\n",
+    "\n",
+    "#Run basic calculations to obtain purchase count, avg. purchase price, avg. purchase total per person etc. in the table below\n",
+    "\n",
+    "\n",
+    "#Create a summary data frame to hold the results\n",
+    "\n",
+    "\n",
+    "#Optional: give the displayed data cleaner formatting\n",
+    "\n",
+    "\n",
+    "#Display the summary data fram\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Top Spenders\n",
+    " \n",
+    "#Run basic calculations to obtain the results in the table below\n",
+    "\n",
+    "\n",
+    "#Create a summary data frame to hold the results\n",
+    "\n",
+    "\n",
+    "#Sort the total purchase value column in descending order\n",
+    "\n",
+    "\n",
+    "#Optional: give the displayed data cleaner formatting\n",
+    "\n",
+    "\n",
+    "#Display a preview of the summary data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " #Most Popular Items\n",
+    " \n",
+    "#Retrieve the Item ID, Item Name, and Item Price columns\n",
+    "\n",
+    "\n",
+    "#Group by Item ID and Item Name. Perform calculations to obtain purchase count, average item price, and total purchase value\n",
+    "\n",
+    "\n",
+    "#Create a summary data frame to hold the results\n",
+    "\n",
+    "\n",
+    "#Sort the purchase count column in descending order\n",
+    "\n",
+    "\n",
+    "#Optional: give the displayed data cleaner formatting\n",
+    "\n",
+    "\n",
+    "#Display a preview of the summary data frame"
    ]
   },
   {
@@ -131,7 +511,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " #Most Profitable Items\n",
+    " \n",
+    "#Sort the above table by total purchase value in descending order\n",
+    "\n",
+    "\n",
+    "#Optional: give the displayed data cleaner formatting\n",
+    "\n",
+    "\n",
+    "#Display a preview of the data frame"
+   ]
   }
  ],
  "metadata": {
