--- a/HeroesOfPymoli/Pymoli.ipynb
+++ b/HeroesOfPymoli/Pymoli.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "0            576"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "[145 rows x 4 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
     "#Run basic calculations to obtain number of unique items, average price, etc.\n",
     "#datafunctions day1\n",
     "\n",
-    "unique_items = len(purchase_data_df[\"Item Name\"].unique())\n",
+    "unique_items = purchase_data_df[\"Item Name\"].nunique()\n",
     "\n",
     "average_price = purchase_data_df[\"Price\"].mean()\n",
     "\n",
@@ -362,37 +362,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 272,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'genders_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-115-1cd6a596d11e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#Percentage and Count of Male Players\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mgenderpercent\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mgenders_df\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mplayer_count\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;31m#Percentage and Count of Female Players\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'genders_df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Gender Demographics\n",
-    "genders = purchase_data_df[\"Gender\"].value_counts()\n",
-    "gender_df = pd.DataFrame(gender)\n",
+    "#use grouby?\n",
+    "gender_demo = purchase_data_df.loc[:, [\"SN\", \"Age\", \"Gender\"]].drop_duplicates()\n",
+    "gender_demo = gender_demo[\"Gender\"].value_counts()\n",
+    "gender_demo_percentage = gender_demo/totalplayers*100\n",
+    "\n",
+    "gender_demo_summary= pd.DataFrame({\n",
+    "    \"Total Count\": gender_demo,\n",
+    "    \"percentage of players\": gender_demo_percentage\n",
+    "    }).style.format({\"Percentage of players\": \"{:.4}%\"})\n",
     "#Percentage and Count of Male Players\n",
-    "\n",
-    "genderpercent = (genders_df/player_count)*100\n",
     "#Percentage and Count of Female Players\n",
-    "\n",
-    "\n",
     "#Percentage and Count of Other / Non-Disclosed\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,22 +403,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 274,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Count</th>\n",
+       "      <th>Percentage of Players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>24</td>\n",
+       "      <td>4.17%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-14</th>\n",
+       "      <td>41</td>\n",
+       "      <td>7.12%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15-19</th>\n",
+       "      <td>150</td>\n",
+       "      <td>26.04%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20-24</th>\n",
+       "      <td>232</td>\n",
+       "      <td>40.28%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25-29</th>\n",
+       "      <td>59</td>\n",
+       "      <td>10.24%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-34</th>\n",
+       "      <td>37</td>\n",
+       "      <td>6.42%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35-39</th>\n",
+       "      <td>26</td>\n",
+       "      <td>4.51%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40+</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1.22%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Total Count Percentage of Players\n",
+       "<10             24                 4.17%\n",
+       "10-14           41                 7.12%\n",
+       "15-19          150                26.04%\n",
+       "20-24          232                40.28%\n",
+       "25-29           59                10.24%\n",
+       "30-34           37                 6.42%\n",
+       "35-39           26                 4.51%\n",
+       "40+              7                 1.22%"
+      ]
+     },
+     "execution_count": 274,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Age Demographics\n",
     "#Establish bins for ages\n",
-    "\n",
-    "\n",
+    "#binning day3\n",
+    "bins = [0, 10, 15, 20, 25, 30, 35, 40, 100 ]\n",
+    "group_names = ['<10', '10-14', '15-19', '20-24', '25-29', '30-34', '35-39', '40+']\n",
+    "age_grouped_df = purchase_data_df.loc[:,[\"SN\", \"Age\"]].drop_duplicates()\n",
     "#Categorize the existing players using the age bins. Hint: use pd.cut()\n",
+    "purchase_data_df[\"Age Ranges\"] = pd.cut(purchase_data_df[\"Age\"], bins, labels=group_names)\n",
+    "purchase_data_df\n",
+    "#do groupby\n",
+    "age_grouped = purchase_data_df.groupby(\"Age Ranges\")\n",
+    "other_members = age_grouped[\"SN\"].nunique()\n",
     "\n",
-    "\n",
+    "#age_demographics_total = total_players_df['Age ranges'].value_counts()\n",
+    "age_demographics_percentage = other_members/totalplayers * 100\n",
     "#Calculate the numbers and percentages by age group\n",
+    "\n",
+    "age_demographics_df = pd.DataFrame({\"Total Count\": other_members, \"Percentage of Players\": age_demographics_percentage})\n",
     "\n",
     "\n",
     "#Create a summary data frame to hold the results\n",
+    "age_demographics_df.index.name = None\n",
     "\n",
+    "age_demographics_df[\"Percentage of Players\"] = age_demographics_df[\"Percentage of Players\"].map(\"{:.2f}%\".format)\n",
+    "\n",
+    "age_demographics_df\n",
     "\n",
     "#Optional: round the percentage column to two decimal points\n",
     "\n",
@@ -437,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +618,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData]",
+   "display_name": "Python [conda env:PythonData] *",
    "language": "python",
    "name": "conda-env-PythonData-py"
   },
