--- a/HeroesOfPymoli/Pymoli.ipynb
+++ b/HeroesOfPymoli/Pymoli.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "data_file_to_load = \"resources/purchase_data.csv\""
+    "data_file_to_load = \"resources/purchase_data.csv\"\n",
+    "pd.options.display.float_format = '${:,.2f}'.format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +57,7 @@
        "      <td>Male</td>\n",
        "      <td>108</td>\n",
        "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
-       "      <td>3.53</td>\n",
+       "      <td>$3.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -66,7 +67,7 @@
        "      <td>Male</td>\n",
        "      <td>143</td>\n",
        "      <td>Frenzied Scimitar</td>\n",
-       "      <td>1.56</td>\n",
+       "      <td>$1.56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -76,7 +77,7 @@
        "      <td>Male</td>\n",
        "      <td>92</td>\n",
        "      <td>Final Critic</td>\n",
-       "      <td>4.88</td>\n",
+       "      <td>$4.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -86,7 +87,7 @@
        "      <td>Male</td>\n",
        "      <td>100</td>\n",
        "      <td>Blindscythe</td>\n",
-       "      <td>3.27</td>\n",
+       "      <td>$3.27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -96,7 +97,7 @@
        "      <td>Male</td>\n",
        "      <td>131</td>\n",
        "      <td>Fury</td>\n",
-       "      <td>1.44</td>\n",
+       "      <td>$1.44</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -111,14 +112,14 @@
        "4            4      Iskosia90   23   Male      131   \n",
        "\n",
        "                                   Item Name  Price  \n",
-       "0  Extraction, Quickblade Of Trembling Hands   3.53  \n",
-       "1                          Frenzied Scimitar   1.56  \n",
-       "2                               Final Critic   4.88  \n",
-       "3                                Blindscythe   3.27  \n",
-       "4                                       Fury   1.44  "
+       "0  Extraction, Quickblade Of Trembling Hands  $3.53  \n",
+       "1                          Frenzied Scimitar  $1.56  \n",
+       "2                               Final Critic  $4.88  \n",
+       "3                                Blindscythe  $3.27  \n",
+       "4                                       Fury  $1.44  "
       ]
      },
-     "execution_count": 269,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +172,7 @@
        "0            576"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,8 +187,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Purchasing Analysis (Total)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Run basic calculations to obtain number of unique items, average price, etc.\n",
+    "* Create a summary data frame to hold the results\n",
+    "* Optional: give the displayed data cleaner formatting\n",
+    "* Display the summary data frame"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -212,178 +230,262 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Number of Unique Items</th>\n",
-       "      <th>Average price</th>\n",
+       "      <th>Average Price</th>\n",
        "      <th>Number of Purchases</th>\n",
        "      <th>Total Revenue</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4.40</th>\n",
+       "      <th>0</th>\n",
        "      <td>179</td>\n",
-       "      <td>3.050987</td>\n",
-       "      <td>21</td>\n",
-       "      <td>2379.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4.23</th>\n",
-       "      <td>179</td>\n",
-       "      <td>3.050987</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2379.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4.35</th>\n",
-       "      <td>179</td>\n",
-       "      <td>3.050987</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2379.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2.18</th>\n",
-       "      <td>179</td>\n",
-       "      <td>3.050987</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2379.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.02</th>\n",
-       "      <td>179</td>\n",
-       "      <td>3.050987</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2379.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2.17</th>\n",
-       "      <td>179</td>\n",
-       "      <td>3.050987</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2379.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4.17</th>\n",
-       "      <td>179</td>\n",
-       "      <td>3.050987</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2379.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.99</th>\n",
-       "      <td>179</td>\n",
-       "      <td>3.050987</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2379.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4.50</th>\n",
-       "      <td>179</td>\n",
-       "      <td>3.050987</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2379.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3.30</th>\n",
-       "      <td>179</td>\n",
-       "      <td>3.050987</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2379.77</td>\n",
+       "      <td>$3.05</td>\n",
+       "      <td>780</td>\n",
+       "      <td>$2,379.77</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>145 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Number of Unique Items  Average price  Number of Purchases  \\\n",
-       "4.40                     179       3.050987                   21   \n",
-       "4.23                     179       3.050987                   20   \n",
-       "4.35                     179       3.050987                   14   \n",
-       "2.18                     179       3.050987                   14   \n",
-       "1.02                     179       3.050987                   14   \n",
-       "...                      ...            ...                  ...   \n",
-       "2.17                     179       3.050987                    1   \n",
-       "4.17                     179       3.050987                    1   \n",
-       "1.99                     179       3.050987                    1   \n",
-       "4.50                     179       3.050987                    1   \n",
-       "3.30                     179       3.050987                    1   \n",
-       "\n",
-       "      Total Revenue  \n",
-       "4.40        2379.77  \n",
-       "4.23        2379.77  \n",
-       "4.35        2379.77  \n",
-       "2.18        2379.77  \n",
-       "1.02        2379.77  \n",
-       "...             ...  \n",
-       "2.17        2379.77  \n",
-       "4.17        2379.77  \n",
-       "1.99        2379.77  \n",
-       "4.50        2379.77  \n",
-       "3.30        2379.77  \n",
-       "\n",
-       "[145 rows x 4 columns]"
+       "   Number of Unique Items  Average Price  Number of Purchases  Total Revenue\n",
+       "0                     179          $3.05                  780      $2,379.77"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Purchase Analysis(Total)\n",
-    "#Run basic calculations to obtain number of unique items, average price, etc.\n",
-    "#datafunctions day1\n",
-    "\n",
-    "unique_items = purchase_data_df[\"Item Name\"].nunique()\n",
-    "\n",
-    "average_price = purchase_data_df[\"Price\"].mean()\n",
-    "\n",
-    "number_of_purchases = purchase_data_df[\"Price\"].value_counts()\n",
-    "total_revenue = purchase_data_df[\"Price\"].sum()\n",
-    "#Create a summary data frame to hold the results\n",
-    "#goodreadssummary\n",
-    "purchase_analysis_df = pd.DataFrame({\"Number of Unique Items\": unique_items,\n",
-    "                                     \"Average price\": average_price,\n",
-    "                                 \"Number of Purchases\": number_of_purchases,\n",
-    "                                     \"Total Revenue\": total_revenue})\n",
-    "purchase_analysis_df\n",
-    "#Optional: give the displayed data cleaner formatting\n",
-    "#mapping exerciseday3\n",
-    "#purchase_analysis_df[\"Average price\"] = purchase_data_df[\"Average price\"].map(\"${:.2f}\".format)\n",
-    "\n",
-    "#Display the summary data frame"
+    "pd.DataFrame({'Number of Unique Items': [purchase_data_df['Item Name'].nunique()],\\\n",
+    "              'Average Price': [round(purchase_data_df.Price.mean(),2)],\\\n",
+    "              'Number of Purchases':[purchase_data_df.Price.count()],\\\n",
+    "              \"Total Revenue\":[purchase_data_df.Price.sum()]})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gender Demographics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Percentage and Count of Male Players\n",
+    "* Percentage and Count of Female Players\n",
+    "* Percentage and Count of Other / Non-Disclosed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase ID</th>\n",
+       "      <th>SN</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Lisim78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
+       "      <td>$3.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Lisovynya38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Frenzied Scimitar</td>\n",
+       "      <td>$1.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ithergue48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>$4.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Chamassasya86</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Blindscythe</td>\n",
+       "      <td>$3.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iskosia90</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>131</td>\n",
+       "      <td>Fury</td>\n",
+       "      <td>$1.44</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Purchase ID             SN  Age Gender  Item ID  \\\n",
+       "0            0        Lisim78   20   Male      108   \n",
+       "1            1    Lisovynya38   40   Male      143   \n",
+       "2            2     Ithergue48   24   Male       92   \n",
+       "3            3  Chamassasya86   24   Male      100   \n",
+       "4            4      Iskosia90   23   Male      131   \n",
+       "\n",
+       "                                   Item Name  Price  \n",
+       "0  Extraction, Quickblade Of Trembling Hands  $3.53  \n",
+       "1                          Frenzied Scimitar  $1.56  \n",
+       "2                               Final Critic  $4.88  \n",
+       "3                                Blindscythe  $3.27  \n",
+       "4                                       Fury  $1.44  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "purchase_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Count</th>\n",
+       "      <th>Percentage of Players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>484</td>\n",
+       "      <td>84.03%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>81</td>\n",
+       "      <td>14.06%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other / Non-Disclosed</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1.91%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Total Count Percentage of Players\n",
+       "Male                           484                84.03%\n",
+       "Female                          81                14.06%\n",
+       "Other / Non-Disclosed           11                 1.91%"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "players = purchase_data_df[['SN','Age','Gender']].drop_duplicates()\n",
+    "gender = players.Gender.value_counts()\n",
+    "total = players.SN.count()\n",
+    "\n",
+    "df = pd.DataFrame({'Total Count': gender,'Percentage of Players': gender/total * 100})\n",
+    "df['Percentage of Players'] = df['Percentage of Players'].map('{:.2f}%'.format)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Gender Demographics\n",
-    "#use grouby?\n",
-    "gender_demo = purchase_data_df.loc[:, [\"SN\", \"Age\", \"Gender\"]].drop_duplicates()\n",
-    "gender_demo = gender_demo[\"Gender\"].value_counts()\n",
-    "gender_demo_percentage = gender_demo/totalplayers*100\n",
-    "\n",
-    "gender_demo_summary= pd.DataFrame({\n",
-    "    \"Total Count\": gender_demo,\n",
-    "    \"percentage of players\": gender_demo_percentage\n",
-    "    }).style.format({\"Percentage of players\": \"{:.4}%\"})\n",
-    "#Percentage and Count of Male Players\n",
-    "#Percentage and Count of Female Players\n",
-    "#Percentage and Count of Other / Non-Disclosed\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +590,7 @@
        "40+              7                 1.22%"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
